--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2023-09-17  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* poke/pk-diff.pk: Refer to default values of configuration
+	variables in doc strings as to hold the value "initially" rather
+	than "currently".
+
 2023-09-16  Jose E. Marchesi  <jose.marchesi@oracle.com>
 
 	* pickles/Makefile.am (dist_pickles_DATA): Add gpt.pk.
