--- a/ChangeLog
+++ b/ChangeLog
@@ -6,7 +6,19 @@
 	* testsuite/poke.pkl/integers-14.pk: Likewise.
 	* testsuite/poke.pkl/integers-15.pk: Likewise.
 	* testsuite/poke.pkl/integers-16.pk: Likewise.
+	* testsuite/poke.map/ass-map-19.pk: Update test accordingly.
+	* testsuite/poke.map/maps-int-structs-11.pk: Likewise.
+	* testsuite/poke.map/maps-int-structs-6.pk: Likewise.
+	* testsuite/poke.map/maps-int-union-3.pk: Likewise.
+	* testsuite/poke.map/maps-int-union-4.pk: Likewise.
+	* testsuite/poke.map/maps-int-union-5.pk: Likewise.
+	* testsuite/poke.pkl/bconc-lvalue-6.pk: Likewise.
+	* testsuite/poke.pkl/cast-integers-12.pk: Likewise.
+	* testsuite/poke.pkl/cast-integers-8.pk: Likewise.
+	* testsuite/poke.pkl/printf-value-15.pk: Likewise.
 	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
+	* doc/poke.texi (Integer Literals): Document suffixes for bit
+	integer literals.
 
 2023-09-17  Jose E. Marchesi  <jemarch@gnu.org>
 
