nix: add a simple nix shell
2023-10-02  Vincenzo Palazzo  <vincenzopalazzodev@gmail.com>

	* etc/nix/default.nix: add a simple nix shell.
---

This patch includes a simple nix shell that
I use to build 'poke' on my build machine.

I believe this will be beneficial for others
who want to get started within a contained shell.

Another advantage is the ability
to use the nix package manager across all Linux
distributions, not just for NixOS users.

Signed-off-by: Vincenzo Palazzo <vincenzopalazzodev@gmail.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-10-02  Vincenzo Palazzo  <vincenzopalazzodev@gmail.com>
+
+	* etc/nix/default.nix: add a simple nix shell.
+
 2023-09-25  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/libpoke.c (pk_compiler_new_with_flags): Add checks for
