ci: fixing the nix shell format
My mistake, I see that the make check pass
and I push the code, but I edit the nix code
with my nvim editor that I do not use usually
so by default nvim add an empty line at the end.

This is fixing the CI failure

0.02 prohibit_double_semicolon
prohibit_doubled_word
0.08 prohibit_doubled_word
prohibit_empty_lines_at_EOF
etc/nix/default.nix
maint.mk: empty line(s) or no newline at EOF
make: *** [maint.mk:995: sc_prohibit_empty_lines_at_EOF] Error 1
program finished with exit code 2
elapsedTime=1.782967

2023-10-04  Vincenzo Palazzo  <vincenzopalazzodev@gmail.com>

    * etc/nix/default.nix: remove the empty line at the EOF.

Reported-by: CI https://builder.sourceware.org/buildbot/#/builders/218/builds/330
Signed-off-by: Vincenzo Palazzo <vincenzopalazzodev@gmail.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-10-04  Vincenzo Palazzo  <vincenzopalazzodev@gmail.com>
+
+	* etc/nix/default.nix: remove the empty line at the EOF.
+
 2023-10-02  Vincenzo Palazzo  <vincenzopalazzodev@gmail.com>
 
 	* etc/nix/default.nix: add a simple nix shell.
