HACKING: add myself as one of the writers
2023-10-04 Vincenzo Palazzo  <vincenzopalazzodev@gmail.com>

    * etc/hacking.org (Write After Approval): Update.
    * HACKING: Regenerate.

Signed-off-by: Vincenzo Palazzo <vincenzopalazzodev@gmail.com>

--- a/etc/hacking.org
+++ b/etc/hacking.org
@@ -89,6 +89,7 @@ Mohammad-Reza Nabipoor	<mnabipoor@gnu.org>
 David Faust             <david.faust@oracle.com>
 Indu Bhagat             <indu.bhagat@oracle.com>
 Arsen Arsenović		<arsen@aarsen.me>
+Vincenzo Palazzo    <vincenzopalazzodev@gmail.com>
 #+END_VERSE
 
 ** Personal Branches
