--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-10-04 Vincenzo Palazzo  <vincenzopalazzodev@gmail.com>
+
+	* etc/hacking.org (Write After Approval): Update.
+    * HACKING: Regenerate.
+
 2023-10-04  Vincenzo Palazzo  <vincenzopalazzodev@gmail.com>
 
 	* etc/nix/default.nix: remove the empty line at the EOF.
