hacking: add Mohammad-Reza Nabipoor as co-maintainer

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-10-06  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* etc/hacking.org: List Mohammad-Reza Nabipoor as GNU maintainer.
+
 2023-10-04 Vincenzo Palazzo  <vincenzopalazzodev@gmail.com>
 
 	* etc/hacking.org (Write After Approval): Update.
