--- a/etc/hacking.org
+++ b/etc/hacking.org
@@ -39,7 +39,8 @@ along with GNU poke.  If not, see <https://www.gnu.org/licenses/>.
 * Maintenance
 ** GNU Maintainer
 
-   Jose E. Marchesi	<jemarch@gnu.org>
+   Jose E. Marchesi	  <jemarch@gnu.org>
+   Mohammad-Reza Nabipoor <mnabipoor@gnu.org>
 
 ** Global Maintainers
 
