--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-10-09  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* doc/poke.texi (pokefmt): Fix typo in example code.
+	(Integral Structs): Add missing map operator.
+
 2023-10-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/pkl.h (pkl_execute_file): Fix comment regarding
