--- a/doc/poke.texi
+++ b/doc/poke.texi
@@ -8601,7 +8601,7 @@ As as example, @code{pokefmt} will transform the following text
 %@{
   load riscv;
 
-  var a = 1, a = 2;
+  var a = 1, b = 2;
 @}%
 The encoding of ADD R3, R2, R1 instruction in RISC-V instruction set
 is %@{printf "0x%u32x", rv32_add (3, 2, 1);@}%.
@@ -11986,7 +11986,7 @@ Elf64_RelInfoBogus @{
   r_type=0x50607080U
 @}
 (poke) .set endian little
-(poke) Elf64_RelInfoBogus @ 0#B
+(poke) Elf64_RelInfoBogus @@ 0#B
 Elf64_RelInfoBogus @{
   r_sym=0x40302010U,
   r_type=0x80706050U
