HACKING: add myself as a contributor
* etc/hacking.org (Maintainers): Update
* HACKING: Regenerate

--- a/HACKING
+++ b/HACKING
@@ -210,6 +210,7 @@ with GNU poke.  If not, see <https://www.gnu.org/licenses/>.
         Indu Bhagat             <indu.bhagat@oracle.com>
         Arsen Arsenović		<arsen@aarsen.me>
         Vincenzo Palazzo    <vincenzopalazzodev@gmail.com>
+        Martin Cermak		<marticak@gmx.com>
 
 
 2.5 Personal Branches
