gcov.pk: new pickle for editing GCOV data and notes files.
This patch adds a new pickle to poke: gcov.pk.  This pickle contains
definitions for the several data structures in gcov notes (gcno) and
data (gcda) files, as well as the "freestanding" filename headers.

A few tests are also added in the corresponding new testsuite.  There
is still some work to do in the pickle, in particular to support older
versions of the encoding based on the file version: the GCOV format is
assumed to be internal to GCC and it tends to change from time to
time.  At this time the pickle knows how to read data generated by the
latest GCC from git master.

Usage example:

A GCOV data file is generated by compiling this program with
--coverage and then running it passing 12 arguments in the command
line:

  int x = 23;

  int
  foo (int a, int b)
  {
    return a * x + b;
  }

  int
  main (int argc, char **argv)
  {
    int i, res = 0;
    for (i = 0; i < argc; ++i)
      res += foo (i, argc);
    if (res > x)
      return 0;
    else
      return 1;
  }

Then running poke:

  (poke) .file foo.gcda
  (poke) .set endian little
  (poke) GCOV_Data_File @ 0#B
  GCOV_Data_File {
    magic=#<magic:gcda>,
    version=#<ver:B02*>,
    stamp=1392204059,
    records=[GCOV_Record {
      tag=#<object-summary:a1,00,00,00>,
      length=#<length:2#32>,
      data=struct {
        object_summary=struct {
          runs=1,
          sum_max=12
        }
      }
    },GCOV_Record {
      tag=#<function:01,00,00,00>,
      length=#<length:3#32>,
      data=struct {
        function=GCOV_Function {
          ident=108032747,
          lineno_checksum=-1823799646,
          cfg_checksum=-1813227510
        }
      }
    },GCOV_Record {
      tag=#<counter:arcs:01,a1,00,00>,
      length=#<length:8#32>,
      data=struct {
        counters=[1L,12L,12L,1L]
      }
    },GCOV_Record {
      tag=#<function:01,00,00,00>,
      length=#<length:3#32>,
      data=struct {
        function=GCOV_Function {
         

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2023-10-22  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* pickles/gcov.pk: New file.
+	* testsuite/poke.pickles/bmp-test.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
+
 2023-10-09  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* doc/poke.texi (pokefmt): Fix typo in example code.
