--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2023-10-28  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* testsuite/poke.pkl/struct-ind-5.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
+
+2023-10-28  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* pickles/iscan-str.pk: Add usage example.
 
 2023-10-28  Jose E. Marchesi  <jemarch@gnu.org>
