pkl,testsuite: support for using u?int<*> in integral struct itypes
This patch adds support for using "dynamic" integral type specifiers
int<*> and uint<*> to denote the integral type of an integral struct.
For example:

  type Elf64_RelInfo =
    struct uint<*>
    {
      uint<32> r_sym;
      uint<32> r_type;
    };

When such type specifiers are used, the size of the integral type of
the struct is deduced from the total size of the fields.  Compile-time
checks are performed to make sure the deduced type make sense for
signed or unsigned integral types, whatever applies.

Tests and documentation included.

2023-10-28  Jose E. Marchesi  <jemarch@gnu.org>

        * libpoke/pkl-ast.h (PKL_AST_TYPE_I_DYN_P): Define.
        (struct pkl_ast_type): New field dyn_p in integral types.
        * libpoke/pkl-ast.c (pkl_ast_dup_type): Handle dyn_p in integral
        types.
        (pkl_ast_print_1): Likewise.
        * libpoke/pkl-tab.y (dynamic_integral_type_specifier: New rule.
        (integral_struct): Accept a dynamic integral type specifier as
        itype.
        * libpoke/pkl-typify.c (pkl_typify1_ps_type_struct): Handle int<*>
        and uint<*> as integral struct itypes.
        (pkl_typify1_ps_type_integral): Do not check size boundaries at
        compile-time for dynamic integral types.
        * testsuite/poke.pkl/int-struct-type-diag-16.pk: New test.
        * testsuite/poke.pkl/int-struct-type-diag-17.pk: Likewise.
        * testsuite/poke.pkl/int-struct-type-diag-18.pk: Likewise.
        * testsuite/poke.pkl/int-struct-type-diag-19.pk: Likewise.
        * testsuite/poke.pkl/int-struct-dyn-1.pk: Likewise.
        * testsuite/poke.pkl/int-struct-dyn-2.pk: Likewise.
        * testsuite/Makefile.am (EXTRA_DIST): Add new tests.
        * doc/poke.texi (Integral Structs): Document using int<*> and
        uint<*> in integral structs.

--- a/doc/poke.texi
+++ b/doc/poke.texi
@@ -11923,6 +11923,28 @@ offsets) and the total size occupied by the fields should be the same
 size than the one declared in the struct's integer type.  This is
 checked and enforced by the compiler.
 
+It is also possible to not specify the overall size of the integral
+struct and let it be deduced from the sizes of the struct fields.  To
+do so, use the @code{int<*>} and @code{uint<*>} type specifiers.  In
+this example:
+
+@example
+type Elf64_RelInfo =
+  struct uint<*>
+  @{
+    uint<32> r_sym;
+    uint<32> r_type;
+  @};
+@end example
+
+@noindent
+If you don't specify an explicit size for the integral struct, the
+compiler will make sure that the sum of the sizes of the fields is
+within the proper range for the number of bits of a signed or unsigned
+integral type, whatever applies, emitting an error in case it is out
+of range (like for example a size of only one bit for a signed
+integral struct, or a size exceeding 64 bits.)
+
 The Elf64 RELA in Poke can then be encoded like:
 
 @example
